--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="John Doe - Full Stack Developer" />
     <meta name="twitter:description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies." />
-    <title>Rohit Kumar - Full Stack Developer</title>
+    <title>Personal Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
